test/runtime-integration-tests/TestPrograms/Syntax/Invalid/import_non_identifier.5th
import 123;
main(): int { return 0; }
